# yosys-slang

./: .bazelignore  .clang-format  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  LICENSE  MODULE.bazel  Makefile  README.md  addressing.h  build.sh  builder.cc  diag.h  initial_eval.cc  initial_eval.h  memory.h  proc_usage.cc  slang_frontend.cc  slang_frontend.h
.github/: dependabot.yaml
.github/workflows/: bazel.yaml  build-and-test.yaml  build-test.yaml  coverage.yaml
cmake/: AddCompileLinkOptions.cmake  FindYosys.cmake  GitRevision.cmake
dependency_support/: slang.BUILD  slang_ext.bzl  tomlplusplus.BUILD.bazel  tomlplusplus_ext.bzl
src/: BUILD  CMakeLists.txt  abort_helpers.cc  addressing.cc  addressing.h  async_pattern.cc  async_pattern.h  blackboxes.cc  builder.cc  cases.cc  cases.h  diag.cc  diag.h  initial_eval.cc  initial_eval.h  initialization.cc  ir.cc  lvalue.cc  memory.h  naming.cc  procedural.cc  slang_frontend.cc  slang_frontend.h  slang_sva.cc  slang_sva.h  statements.h  sva.cc  sva_converter.cc  sva_converter.h  variables.cc  variables.h  version.h.in
src/backends/yosys/: backend_builder.cc  backend_builder.h  driver.cc  ir.h
src/yosys_plugin/: BUILD.bazel  sva_testutils.cc
tests/: CMakeLists.txt  run.sh
tests/croc_boot/: debugger.tcl_  helloworld.ihex  main.cc  prepare.ys_  run.sh
tests/selects/: all.tcl  bitsel.v  break_return.sv  indexed_down.v  indexed_up.v  priority_encoder.sv  struct_bit_select.sv
tests/sva/: 01_temporal_delay.sv  01_temporal_delay.ys  02_implication.sv  02_implication.ys  03_sequences.sv  03_sequences.ys  04_repetition_consecutive.sv  04_repetition_consecutive.ys  05_repetition_nonconsec.sv  05_repetition_nonconsec.ys  06_throughout_within.sv  06_throughout_within.ys  07_intersect_firstmatch.sv  07_intersect_firstmatch.ys  08_sva_functions.sv  08_sva_functions.ys  09_property_declarations.sv  09_property_declarations.ys  10_disable_iff.sv  10_disable_iff.ys  11_local_variables.sv  11_local_variables.ys  12_deferred_assertions.sv  12_deferred_assertions.ys  13_expect_statement.sv  13_expect_statement.ys  14_concurrent_assertions.sv  14_concurrent_assertions.ys  15_multiclock.sv  15_multiclock.ys  16_complex_scenarios.sv  16_complex_scenarios.ys  17_strong_weak.sv  17_strong_weak.ys  18_abort_operators.sv  18_abort_operators.ys  19_conditional_property.sv  19_conditional_property.ys  20_case_property.sv  20_case_property.ys  (+8 more)
tests/unit/: all.tcl  async.ys  bitsel.sv  break.sv  break_return.sv  case.sv  clog2.sv  complex_lhs.sv  countones.sv  dff.ys  dualedge.ys  dynamic_lhs_sparse.sv  eval_concat_pattern_order.sv  expr_bitwise_z_simplification.tcl  expr_boolean_cone.sv  expr_wide_bitwise_semantics.sv  expression_attrs.ys  field.sv  flops.ys  foreach.sv  function_call.ys  init.sv  latch.ys  latch_addressing.ys  modport.sv  partsel_down.sv  partsel_lhs.sv  partsel_up.sv  port_conn.sv  port_sext.sv  primitives.sv  primitives_noname.sv  rs_trigger.ys  selftests.tcl  shift_ops.sv  slice.sv  static_element_select.sv  static_rhs_fastpath.sv  sva.sv  switchhelper_rank1.sv  (+5 more)
tests/various/: assign_mixing.ys  assignment_pattern_lhs.ys  bb_detect.ys  bb_nettype_port.ys  be_unpacked_array.ys  blackbox_scenarios.ys  bus_range.ys  concurrent_assert.sv  concurrent_assert.ys  defaults.ys  delays.sv  delays.ys  dualedge.ys  expect_test.ys  expr.sv  expr.ys  flop_naming.ys  formal_stmts.sv  formal_stmts.ys  hierref_error.ys  huge_reg.sv  huge_reg.ys  ignore_asserts.ys  init.ys  intf_array_naming.ys  intf_array_w_hierarchy.sv  intf_w_hierarchy.sv  intf_w_hierarchy.ys  issue142.ys  issue143.ys  issue208.ys  issue227.ys  issue240.ys  issue259.ys  issue266.ys  issue300.ys  issue50.v  issue50.ys  issue_inst_caching_iface.ys  mem_inference.ys  (+36 more)
