"""yosys-slang plugin: builds slang.so against @yosys//:hdrs.

slang and fmt are vendored as git submodules under third_party/. The
diagnostic_gen.py / syntax_gen.py codegen mirrors what slang's own
cmake runs at build time. SLANG_VERSION_PATCH/HASH are stubbed (cmake
derives them from `git describe`); refine with a workspace-status hook
if needed.
"""

load("@bazel_skylib//rules:expand_template.bzl", "expand_template")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_license//rules:license.bzl", "license")

package(
    default_applicable_licenses = [":license"],
    default_visibility = ["//visibility:public"],
    features = ["layering_check"],
)

license(
    name = "license",
    package_name = "yosys-slang",
    license_kinds = ["@rules_license//licenses/spdx:ISC"],
    license_text = "LICENSE",
)

# Version of the slang library tracked in third_party/slang.
# Bump when the submodule is updated. SLANG_VERSION_PATCH/HASH are
# normally derived from `git describe`; left as 0/"unknown" here since
# the submodule is checked out detached.
SLANG_VERSION_MAJOR = 10
SLANG_VERSION_MINOR = 0
SLANG_VERSION_PATCH = 0
SLANG_VERSION_HASH = "unknown"

# yosys-slang's own revision string is taken from MODULE.bazel's
# version field (set by the BCR submitter at release time).
YOSYS_SLANG_REVISION = module_version() or "unknown"

# --- Generated export header (static build = no-op) ---

genrule(
    name = "slang_export_h",
    outs = ["slang/slang_export.h"],
    cmd = """cat > $@ << 'HEADER'
#pragma once
#define SLANG_EXPORT
#define SLANG_NO_EXPORT
HEADER""",
)

expand_template(
    name = "slang_version_cpp",
    out = "VersionInfo.cpp",
    substitutions = {
        "@SLANG_VERSION_MAJOR@": str(SLANG_VERSION_MAJOR),
        "@SLANG_VERSION_MINOR@": str(SLANG_VERSION_MINOR),
        "@SLANG_VERSION_PATCH@": str(SLANG_VERSION_PATCH),
        "@SLANG_VERSION_HASH@": SLANG_VERSION_HASH,
    },
    template = "third_party/slang/source/util/VersionInfo.cpp.in",
)

# --- Code generation for slang ---

genrule(
    name = "slang_diag_gen",
    srcs = [
        "third_party/slang/scripts/diagnostic_gen.py",
        "third_party/slang/scripts/diagnostics.txt",
    ] + glob([
        "third_party/slang/source/**/*.cpp",
        "third_party/slang/include/slang/**/*.h",
    ]),
    outs = [
        "DiagCode.cpp",
        "slang/diagnostics/AllDiags.h",
        "slang/diagnostics/AnalysisDiags.h",
        "slang/diagnostics/CompilationDiags.h",
        "slang/diagnostics/ConstEvalDiags.h",
        "slang/diagnostics/DeclarationsDiags.h",
        "slang/diagnostics/ExpressionsDiags.h",
        "slang/diagnostics/GeneralDiags.h",
        "slang/diagnostics/LexerDiags.h",
        "slang/diagnostics/LookupDiags.h",
        "slang/diagnostics/MetaDiags.h",
        "slang/diagnostics/NumericDiags.h",
        "slang/diagnostics/ParserDiags.h",
        "slang/diagnostics/PreprocessorDiags.h",
        "slang/diagnostics/StatementsDiags.h",
        "slang/diagnostics/SysFuncsDiags.h",
        "slang/diagnostics/TypesDiags.h",
    ],
    cmd = """
        $(PYTHON3) $(location third_party/slang/scripts/diagnostic_gen.py) \
            --outDir $(@D) \
            --srcDir $$(dirname $(location third_party/slang/source/parsing/Parser.cpp))/.. \
            --incDir $$(dirname $(location third_party/slang/include/slang/diagnostics/Diagnostics.h))/.. \
            --diagnostics $(location third_party/slang/scripts/diagnostics.txt)
    """,
    toolchains = ["@rules_python//python:current_py_toolchain"],
)

genrule(
    name = "slang_syntax_gen",
    srcs = glob(["third_party/slang/scripts/*.txt"]) + [
        "third_party/slang/scripts/syntax_gen.py",
    ],
    outs = [
        "AllSyntax.cpp",
        "KnownSystemName.cpp",
        "SyntaxClone.cpp",
        "TokenKind.cpp",
        "slang/syntax/AllSyntax.h",
        "slang/syntax/CSTJsonVisitorGen.h",
        "slang/syntax/SyntaxFwd.h",
        "slang/syntax/SyntaxKind.h",
        "slang/parsing/TokenKind.h",
        "slang/parsing/KnownSystemName.h",
    ],
    cmd = """
        SCRIPTS=$$(dirname $(location third_party/slang/scripts/syntax_gen.py)) && \
        $(PYTHON3) $(location third_party/slang/scripts/syntax_gen.py) \
            --dir $(@D) \
            --syntax $$SCRIPTS/syntax.txt
    """,
    toolchains = ["@rules_python//python:current_py_toolchain"],
)

# --- fmt (vendored in third_party/fmt) ---

cc_library(
    name = "fmt",
    srcs = [
        "third_party/fmt/src/format.cc",
        "third_party/fmt/src/os.cc",
    ],
    hdrs = glob(["third_party/fmt/include/fmt/*.h"]),
    copts = [
        "-fPIC",
        "-std=c++20",
    ],
    includes = ["third_party/fmt/include"],
)

# --- slang (vendored in third_party/slang) ---

cc_library(
    name = "slang",
    srcs = glob(
        ["third_party/slang/source/**/*.cpp"],
    ) + glob(
        ["third_party/slang/source/**/*.h"],
    ) + [
        ":AllSyntax.cpp",
        ":DiagCode.cpp",
        ":KnownSystemName.cpp",
        ":SyntaxClone.cpp",
        ":TokenKind.cpp",
        ":VersionInfo.cpp",
    ],
    hdrs = glob([
        "third_party/slang/include/**/*.h",
        "third_party/slang/external/**/*.hpp",  # buildifier: disable=external-path
        "third_party/slang/external/ieee1800/**",  # buildifier: disable=external-path
    ]) + [
        ":slang/diagnostics/AllDiags.h",
        ":slang/diagnostics/AnalysisDiags.h",
        ":slang/diagnostics/CompilationDiags.h",
        ":slang/diagnostics/ConstEvalDiags.h",
        ":slang/diagnostics/DeclarationsDiags.h",
        ":slang/diagnostics/ExpressionsDiags.h",
        ":slang/diagnostics/GeneralDiags.h",
        ":slang/diagnostics/LexerDiags.h",
        ":slang/diagnostics/LookupDiags.h",
        ":slang/diagnostics/MetaDiags.h",
        ":slang/diagnostics/NumericDiags.h",
        ":slang/diagnostics/ParserDiags.h",
        ":slang/diagnostics/PreprocessorDiags.h",
        ":slang/diagnostics/StatementsDiags.h",
        ":slang/diagnostics/SysFuncsDiags.h",
        ":slang/diagnostics/TypesDiags.h",
        ":slang/parsing/KnownSystemName.h",
        ":slang/parsing/TokenKind.h",
        ":slang/slang_export.h",
        ":slang/syntax/AllSyntax.h",
        ":slang/syntax/CSTJsonVisitorGen.h",
        ":slang/syntax/SyntaxFwd.h",
        ":slang/syntax/SyntaxKind.h",
    ],
    copts = [
        "-fPIC",
        "-std=c++20",
        "-Wno-unused-parameter",
    ],
    defines = ["SLANG_BOOST_SINGLE_HEADER"],
    includes = [
        "third_party/slang/external",
        "third_party/slang/include",
        "third_party/slang/source/ast/builtins",
    ],
    deps = [":fmt"],
)

expand_template(
    name = "version_h",
    out = "version.h",
    substitutions = {
        "@YOSYS_SLANG_REVISION@": YOSYS_SLANG_REVISION,
        "@SLANG_REVISION@": "{}.{}.{}".format(
            SLANG_VERSION_MAJOR,
            SLANG_VERSION_MINOR,
            SLANG_VERSION_PATCH,
        ),
    },
    template = "src/version.h.in",
)

# --- yosys-slang plugin (shared library) ---

cc_library(
    name = "yosys_slang_plugin",
    srcs = glob([
        "src/*.cc",
        "src/*.h",
    ]) + [":version.h"],
    copts = [
        "-fPIC",
        "-std=c++20",
        "-Wno-unused-parameter",
    ],
    visibility = ["//src/yosys_plugin:__pkg__"],
    deps = [
        ":slang",
        "@yosys//:hdrs",
    ],
    alwayslink = True,
)

