"""yosys-slang plugin: SystemVerilog frontend for yosys via slang."""

module(
    name = "yosys-slang",
    version = "0.0.0",
    bazel_compatibility = [">=7.2.1"],
)

# yosys 0.62.bcr.2 is the first release that exports :hdrs for plugins.
bazel_dep(name = "yosys", version = "0.62.bcr.2")
bazel_dep(name = "rules_cc", version = "0.2.4")
